# MENGcpp

./: .gitignore  CMakeLists.txt  CMakePresets.json  Equilibrium.cpp  Field.cpp  Field.h  LICENSE  Particle.cpp  main.cpp  makefile  readme  simulation
inih/: INIReaderExt.h
inputfiles/: compare_derivative.py  evolve_Phi_and_Apar.py  input.ini  input.particle  input.spline  normalized.py  plot_phik.py  plt_Amp_and_omega1.py  plt_amp.py  plt_complex_field_grad.py  plt_data_spline1d.py  plt_data_spline2d.py  plt_data_spline3d.py  plt_data_track.py  plt_dens_profiles.py  plt_dxvdt.py  plt_field2particle.py  plt_omega1.py  plt_particle_load.py  plt_particle_total_energy.py  plt_q_rho.py
src/: CMakeLists.txt  Equilibrium.cpp  Equilibrium.h  Field.cpp  Field.h  FieldExt.cpp  FieldExt.h  GKEM2D1FCls.h  MPIManager.h  Particle.cpp  Particle.h  ParticleExtCls.cpp  ParticleExtCls.h  SplineCubic2d1f.cpp  SplineCubic2d1f.h  SplineCubicNd.cpp  SplineCubicNd.h  constants.h  data_fspl.txt  equil_class.F90  main.cpp  util_io.cpp  util_io.h  util_math.cpp  util_math.h
